# kibela-to-slack

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  serverless.yml
src/: app.py  config.py  filters.py  index.html  lambda_handler.py  types.py
