[tool.poetry]
name = "kibela-slack"
version = "0.1.0"
description = ""
authors = ["Mitsuki Ogasahara <negiga@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
uvicorn = "^0.12.1"
requests = "^2.24.0"
mangum = "^0.10.0"
python-multipart = "^0.0.5"
boto3 = "^1.15.17"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
flake8 = "^3.8.4"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
